hphp/hack/test/typecheck/coeffect_encapsulation/ctx_const_access2.php
<?hh

class foo {
  const ctx Bar = [write_props];
}

function main()[foo::Bar]: void {
  echo "fail"; // error
}
